Fix spacing between examples codes

--- a/next.clayui.com/src/styles/_guide.scss
+++ b/next.clayui.com/src/styles/_guide.scss
@@ -52,7 +52,7 @@
 
 	.clay-p {
 		line-height: 1.5;
-		margin-bottom: $base-size * 0.5;
+		margin-top: $base-size * 0.5;
 	}
 
 	blockquote {
@@ -92,7 +92,7 @@
 	.sheet-example {
 		position: relative;
 		padding: 1.5rem;
-		margin: 1rem -15px 0;
+		margin: 2rem -15px 0;
 		margin-right: 0;
 		margin-left: 0;
 		border-width: .2rem;
